@@ -10,6 +10,10 @@ include $(POCO_BASE)/build/rules/global
 
 objects = File2Page
 
+ifdef POCO_UNBUNDLED
+        SYSLIBS += -lz -lpcre -lexpat
+endif
+
 target         = f2cpsp
 target_version = 1
 target_libs    = PocoUtil PocoXML PocoFoundation
